--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Pieter Stokkink",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.15.2",
     "dotenv": "^4.0.0",
     "express": "^4.14.0",
     "mongodb": "^2.2.20"
